# PsychoPy-Behavioral-Template

./: .gitignore  CustomExp.py  CustomExp_fedora_config.ini  CustomTrialSeq.py  Experiment_config.ini  IMPORTING_GUIDE.md  LICENSE  MANIFEST.in  QUICK_REFERENCE.md  README.md  blockbreak.py  config.json  experiment.py  fixation.py  imgcategorization.py  intro.py  main.py  outro.py  pyproject.toml  ratingscreen.py  responsescreen.py  sampletrial.py  send_notification.py  trial.py  trialbreak.py  trialgroup.py
backup/: lastfile.csv
psychopy_template/: __init__.py  eeg.py  experiment.py  feedback.py  fixation.py  monitortools.py  outro.py  ratingscreen.py  responsescreen.py  runner.py  trial.py  trialbreak.py  trialgroup.py
src/: blockbreak.py  experiment.py  experimentgroup.py  feedback.py  fixation.py  intro.py  monitortools.py  outro.py  ratingscreen.py  responsescreen.py  run.py  sampletrial.py  trial.py  trialbreak.py  trialgroup.py  trialsequence.py
src/backup/: lastfile.csv
